tests/NormalTests/paczka1/small_fuzzy/30551371.err
Error in line 13: A4V2 S289 84,5
Error in line 15: oBC6Jf6iQ S364 -3,9
